--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,39 @@
 body {
-    font-family: 'Titan One', sans-serif;
-    background: #FF0099;
-    background-image: linear-gradient(45deg,#3023AE 0%,#FF0099 100%);
-    height: 100vh;
+  font-family: "Titan One", sans-serif;
+  background: #ff0099;
+  background-image: linear-gradient(45deg, #3023ae 0%, #ff0099 100%);
+  height: 100vh;
 }
 main {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-top: 20px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-top: 20px;
 
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: rgb(245, 245, 220, 50) ;
-    border-radius: 86% 14% 94% 6% / 7% 90% 10% 93% ;
-
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: rgb(245, 245, 220, 50);
+  border-radius: 86% 14% 97% 3% / 7% 94% 6% 93%;
+  border: 0.5px solid black;
 }
 /* Tablet styles (768px and above) */
 @media only screen and (min-width: 768px) {
     main {
-        margin-right: 200px;
-        margin-left: 200px;
+        margin-right: 150px;
+        margin-left: 150px;
     }
-  }
-  /* Desktop styles (1024px and above) */
-  @media only screen and (min-width: 1024px) {
+}
+/* Desktop styles (1024px and above) */
+@media only screen and (min-width: 1024px) {
     main {
         margin-right: 400px;
         margin-left: 400px;
     }
-  }
+}
 
 .scoreboard {
     height: 100px;
@@ -44,7 +44,7 @@ main {
     align-items: center;
 }
 .prompt {
-    border: 1px solid  black;
+    border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
     height: 200px;
@@ -55,8 +55,13 @@ main {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
-i {
+.options i {
     font-size: 70px;
+    transition: color 0.3s, transform 0.3s;
+}
+.options i:hover {
+    color: #585858; /* Change the color on hover */
+    transform: scale(1.1); /* Scale the icon on hover */
 }
