--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,11 @@ main {
   align-items: center;
   gap: 20px;
   padding: 20px;
-  margin-right: 30px;
-  margin-left: 30px;
-  margin-top: 20px;
-
+  margin: 100px 30px 0px 30px;
+  background-color: rgb(245, 245, 220);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  background-color: rgb(245, 245, 220, 50);
   border-radius: 86% 14% 97% 3% / 7% 94% 6% 93%;
-  border: 0.5px solid black;
+  border: 2px solid black;
 }
 /* Tablet styles (768px and above) */
 @media only screen and (min-width: 768px) {
@@ -36,32 +33,58 @@ main {
 }
 
 .scoreboard {
-    height: 100px;
-    width: 300px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    align-items: center;
-}
-.prompt {
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
     height: 200px;
-    width: 90%;
+    width: 60%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: black 3px solid;
+    border-radius: 98% 2% 94% 6% / 6% 90% 10% 94%;
+    overflow: hidden;
 }
-.options {
+.scoreboard-info {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    width: 100%;
+}
+.scoreboard-player, .scoreboard-computer {
+    width: 50%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+.scoreboard-player {
+    background-color: dodgerblue;
+    border-radius: 86% 14% 94% 6% / 0% 94% 6% 100% ;
+}
+.scoreboard-computer {
+    background-color: rgb(255, 57, 57);
+    border-radius: 100% 0% 91% 9% / 14% 94% 6% 86%;
+}
+.prompt {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  height: 150px;
+  width: 90%;
+}
+.options {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
 }
 .options i {
-    font-size: 70px;
-    transition: color 0.3s, transform 0.3s;
+  font-size: 70px;
+  transition: color 0.3s, transform 0.3s;
 }
 .options i:hover {
-    color: #585858; /* Change the color on hover */
-    transform: scale(1.1); /* Scale the icon on hover */
+  color: #585858; /* Change the color on hover */
+  transform: scale(1.1); /* Scale the icon on hover */
 }
