--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,11 @@ main {
   border: 1px solid black;
   border-radius: 10px;
   padding: 10px;
-  height: 150px;
+  height: 90px;
   width: 90%;
+  overflow-y: auto;
+  max-height: 300px; /* Set a maximum height for the box */
+
 }
 .options {
   display: flex;
@@ -82,6 +85,7 @@ main {
 }
 .options i {
   font-size: 70px;
+  cursor: pointer;
   transition: color 0.3s, transform 0.3s;
 }
 .options i:hover {
