--- a/styles.css
+++ b/styles.css
@@ -51,26 +51,31 @@ main {
     align-items: center;
     width: 100%;
 }
-.scoreboard-player, .scoreboard-computer {
-    width: 50%;
+.scoreboard-player, .scoreboard-computer, .scoreboard-tie {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
 }
 .scoreboard-player {
+    width: 40%;
     background-color: dodgerblue;
     border-radius: 86% 14% 94% 6% / 0% 94% 6% 100% ;
 }
 .scoreboard-computer {
+    width: 40%;
     background-color: rgb(255, 57, 57);
     border-radius: 100% 0% 91% 9% / 14% 94% 6% 86%;
+}
+.scoreboard-tie {
+    width: 20%;
 }
 .prompt {
   border: 1px solid black;
   border-radius: 10px;
   padding: 10px;
-  height: 90px;
+  height: 100px;
+  max-height: 50px;
   width: 90%;
   overflow-y: auto;
   max-height: 300px; /* Set a maximum height for the box */
